deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: messaging-stomp-websocket
  name: messaging-stomp-websocket
spec:
  replicas: 1
  selector:
    matchLabels:
      app: messaging-stomp-websocket
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: messaging-stomp-websocket
    spec:
      containers:
      - image: registry.cn-hangzhou.aliyuncs.com/lgypro/messaging-stomp-websocket:v1
        name: spring-boot-hello-world
        imagePullPolicy: Always
        resources:
          requests:
            cpu: 100m
            memory: 500Mi
          limits:
            cpu: 500m
            memory: 2000Mi
      imagePullSecrets:
      - name: my-secret
