service-np.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: messaging-stomp-websocket
  name: messaging-stomp-websocket
spec:
  ports:
  - name: 8080-8080
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: messaging-stomp-websocket
  type: NodePort
